sdm845: defconfig: Enable REGMAP_SWR
Change-Id: Ie66580c59bac4b2499fd9eaf6b590354ef3874fb
Signed-off-by: celtare21 <celtare21@gmail.com>

--- a/arch/arm64/configs/aicp_oneplus6_defconfig
+++ b/arch/arm64/configs/aicp_oneplus6_defconfig
@@ -1203,7 +1203,7 @@ CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_SPMI=y
 CONFIG_REGMAP_MMIO=y
-# CONFIG_REGMAP_SWR is not set
+CONFIG_REGMAP_SWR=y
 # CONFIG_AQT_REGMAP is not set
 CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 # CONFIG_REGMAP_SND_DIGCDC is not set
